<resources>
    <string name="app_name">ShowApp</string>

    <string name="title_section1">Accelero</string>
    <string name="title_section2">Logger</string>
    <string name="title_section3">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity">Activity</string>
    <string name="vector">Vector</string>
    <string name="no_vector">No Vector</string>
    <string name="no_activity">No Activity</string>
    <string name="zero_point_zero">0.0</string>
    <string name="z_axis">Z-Axis</string>
    <string name="y_axis">Y-Axis</string>
    <string name="x_axis">X-Axis</string>
    <string name="current_acceleration">Current Acceleration:</string>
    <string name="z_axis_max">Z-Axis Max:</string>
    <string name="y_axis_max">Y-Axis Max:</string>
    <string name="x_axis_max">X-Axis Max:</string>
    <string name="max_acceleration">Max Acceleration:</string>
</resources>
